iPhone adaptive Layout

--- a/MyLive2D-SwiftUI.xcodeproj/xcshareddata/xcschemes/MyLive2D-SwiftUI.xcscheme
+++ b/MyLive2D-SwiftUI.xcodeproj/xcshareddata/xcschemes/MyLive2D-SwiftUI.xcscheme
@@ -50,6 +50,18 @@
             ReferencedContainer = "container:MyLive2D-SwiftUI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "METAL_DEVICE_WRAPPER_TYPE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "MTL_DEBUG_LAYER"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
